src/main/java/com/prs/sense/SenseParser.java
// Generated from /Users/upuphone/java/low-chatgpt/src/main/resources/Sense.g4 by ANTLR 4.10.1
package com.prs.sense;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SenseParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, INT=29, FLOAT=30, BOOLEAN=31, 
		STRING=32, FUNCTION=33, ID=34, ID_PATH=35, MACROARG=36, NAMESPACE=37, 
		LINECOMMENT=38, BLOCKCOMMENT=39, SPACES=40, SCRIPT=41, REGEX=42;
	public static final int
		RULE_sense = 0, RULE_nsSentence = 1, RULE_importSentence = 2, RULE_primeSentence = 3, 
		RULE_productionSentence = 4, RULE_exclusion = 5, RULE_annotation = 6, 
		RULE_assigns = 7, RULE_assign = 8, RULE_criteria = 9, RULE_catExpr = 10, 
		RULE_catUnit = 11, RULE_catBranch = 12, RULE_cat = 13, RULE_wordAttrExpr = 14, 
		RULE_wordAttrBranch = 15, RULE_wordAttr = 16, RULE_wordAttrUnit = 17, 
		RULE_value = 18, RULE_array = 19, RULE_dict = 20, RULE_dictItem = 21, 
		RULE_expr = 22, RULE_unit = 23, RULE_idList = 24, RULE_qualifiedName = 25, 
		RULE_namespace = 26, RULE_rep = 27, RULE_repUnit = 28, RULE_branch = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"sense", "nsSentence", "importSentence", "primeSentence", "productionSentence", 
			"exclusion", "annotation", "assigns", "assign", "criteria", "catExpr", 
			"catUnit", "catBranch", "cat", "wordAttrExpr", "wordAttrBranch", "wordAttr", 
			"wordAttrUnit", "value", "array", "dict", "dictItem", "expr", "unit", 
			"idList", "qualifiedName", "namespace", "rep", "repUnit", "branch"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'namespace'", "';'", "'import'", "'::'", "','", "'<'", "'>'", 
			"':'", "'!'", "'@'", "'('", "')'", "'='", "'['", "']'", "'&'", "'|'", 
			"'*'", "'{'", "'}'", "'^'", "'=='", "'!='", "'.'", "'${'", "'~'", "'+'", 
			"'?'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "INT", "FLOAT", "BOOLEAN", "STRING", "FUNCTION", 
			"ID", "ID_PATH", "MACROARG", "NAMESPACE", "LINECOMMENT", "BLOCKCOMMENT", 
			"SPACES", "SCRIPT", "REGEX"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Sense.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SenseParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SenseContext extends ParserRuleContext {
		public NsSentenceContext nsSentence() {
			return getRuleContext(NsSentenceContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SenseParser.EOF, 0); }
		public List<ImportSentenceContext> importSentence() {
			return getRuleContexts(ImportSentenceContext.class);
		}
		public ImportSentenceContext importSentence(int i) {
			return getRuleContext(ImportSentenceContext.class,i);
		}
		public List<PrimeSentenceContext> primeSentence() {
			return getRuleContexts(PrimeSentenceContext.class);
		}
		public PrimeSentenceContext primeSentence(int i) {
			return getRuleContext(PrimeSentenceContext.class,i);
		}
		public List<ProductionSentenceContext> productionSentence() {
			return getRuleContexts(ProductionSentenceContext.class);
		}
		public ProductionSentenceContext productionSentence(int i) {
			return getRuleContext(ProductionSentenceContext.class,i);
		}
		public SenseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sense; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterSense(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitSense(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitSense(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SenseContext sense() throws RecognitionException {
		SenseContext _localctx = new SenseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sense);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			nsSentence();
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(61);
				importSentence();
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__9) | (1L << ID))) != 0)) {
				{
				setState(69);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(67);
					primeSentence();
					}
					break;
				case 2:
					{
					setState(68);
					productionSentence();
					}
					break;
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(74);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NsSentenceContext extends ParserRuleContext {
		public NamespaceContext namespace() {
			return getRuleContext(NamespaceContext.class,0);
		}
		public NsSentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nsSentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterNsSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitNsSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitNsSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NsSentenceContext nsSentence() throws RecognitionException {
		NsSentenceContext _localctx = new NsSentenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_nsSentence);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__0);
			setState(77);
			namespace();
			setState(78);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportSentenceContext extends ParserRuleContext {
		public NamespaceContext namespace() {
			return getRuleContext(NamespaceContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(SenseParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(SenseParser.ID, i);
		}
		public ImportSentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importSentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterImportSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitImportSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitImportSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportSentenceContext importSentence() throws RecognitionException {
		ImportSentenceContext _localctx = new ImportSentenceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importSentence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(T__2);
			{
			setState(81);
			namespace();
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(82);
				match(T__3);
				setState(83);
				match(ID);
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(84);
					match(T__4);
					setState(85);
					match(ID);
					}
					}
					setState(90);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
			setState(93);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimeSentenceContext extends ParserRuleContext {
		public Token name;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ID() { return getToken(SenseParser.ID, 0); }
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public CriteriaContext criteria() {
			return getRuleContext(CriteriaContext.class,0);
		}
		public ExclusionContext exclusion() {
			return getRuleContext(ExclusionContext.class,0);
		}
		public PrimeSentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primeSentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterPrimeSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitPrimeSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitPrimeSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimeSentenceContext primeSentence() throws RecognitionException {
		PrimeSentenceContext _localctx = new PrimeSentenceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_primeSentence);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(95);
					annotation();
					}
					} 
				}
				setState(100);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__9) {
				{
				setState(101);
				criteria();
				}
			}

			setState(104);
			match(T__5);
			setState(105);
			((PrimeSentenceContext)_localctx).name = match(ID);
			setState(106);
			match(T__6);
			setState(107);
			match(T__7);
			setState(108);
			expr();
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(109);
				exclusion();
				}
			}

			setState(112);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProductionSentenceContext extends ParserRuleContext {
		public Token name;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ID() { return getToken(SenseParser.ID, 0); }
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public ExclusionContext exclusion() {
			return getRuleContext(ExclusionContext.class,0);
		}
		public ProductionSentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_productionSentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterProductionSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitProductionSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitProductionSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProductionSentenceContext productionSentence() throws RecognitionException {
		ProductionSentenceContext _localctx = new ProductionSentenceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_productionSentence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__9) {
				{
				{
				setState(114);
				annotation();
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120);
			((ProductionSentenceContext)_localctx).name = match(ID);
			setState(121);
			match(T__7);
			setState(122);
			expr();
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(123);
				exclusion();
				}
			}

			setState(126);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExclusionContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExclusionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exclusion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterExclusion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitExclusion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitExclusion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExclusionContext exclusion() throws RecognitionException {
		ExclusionContext _localctx = new ExclusionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_exclusion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(T__8);
			setState(129);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SenseParser.ID, 0); }
		public AssignsContext assigns() {
			return getRuleContext(AssignsContext.class,0);
		}
		public AnnotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterAnnotation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitAnnotation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitAnnotation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnnotationContext annotation() throws RecognitionException {
		AnnotationContext _localctx = new AnnotationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_annotation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(T__9);
			setState(132);
			match(ID);
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(133);
				assigns();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignsContext extends ParserRuleContext {
		public List<AssignContext> assign() {
			return getRuleContexts(AssignContext.class);
		}
		public AssignContext assign(int i) {
			return getRuleContext(AssignContext.class,i);
		}
		public AssignsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assigns; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterAssigns(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitAssigns(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitAssigns(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignsContext assigns() throws RecognitionException {
		AssignsContext _localctx = new AssignsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_assigns);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(T__10);
			setState(137);
			assign();
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(138);
				match(T__4);
				setState(139);
				assign();
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(145);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SenseParser.ID, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(ID);
			setState(148);
			match(T__12);
			setState(149);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CriteriaContext extends ParserRuleContext {
		public CatExprContext catExpr() {
			return getRuleContext(CatExprContext.class,0);
		}
		public CriteriaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_criteria; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterCriteria(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitCriteria(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitCriteria(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CriteriaContext criteria() throws RecognitionException {
		CriteriaContext _localctx = new CriteriaContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_criteria);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(T__9);
			setState(152);
			match(T__13);
			setState(153);
			catExpr();
			setState(154);
			match(T__14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CatExprContext extends ParserRuleContext {
		public CatExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_catExpr; }
	 
		public CatExprContext() { }
		public void copyFrom(CatExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CatExprAndContext extends CatExprContext {
		public List<CatUnitContext> catUnit() {
			return getRuleContexts(CatUnitContext.class);
		}
		public CatUnitContext catUnit(int i) {
			return getRuleContext(CatUnitContext.class,i);
		}
		public CatExprAndContext(CatExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterCatExprAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitCatExprAnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitCatExprAnd(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CatExprOrContext extends CatExprContext {
		public List<CatBranchContext> catBranch() {
			return getRuleContexts(CatBranchContext.class);
		}
		public CatBranchContext catBranch(int i) {
			return getRuleContext(CatBranchContext.class,i);
		}
		public CatExprOrContext(CatExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterCatExprOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitCatExprOr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitCatExprOr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CatExprUnitContext extends CatExprContext {
		public CatUnitContext catUnit() {
			return getRuleContext(CatUnitContext.class,0);
		}
		public CatExprUnitContext(CatExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).enterCatExprUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SenseListener ) ((SenseListener)listener).exitCatExprUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SenseVisitor ) return ((SenseVisitor<? extends T>)visitor).visitCatExprUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CatExprContext catExpr() throws RecognitionException {
		CatExprContext _localctx = new CatExprContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_catExpr);
		int _la;
		try {
			setState(171);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				_localctx = new CatExprAndContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(156);
				catUnit();
				setState(159); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(157);
					match(T__15);
					setState(158);
					catUnit();
					}
					}
					setState(161); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__15 );
				}
				break;
			case 2:
				_localctx = new CatExprOrContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(163);
				catBranch();
				setState(166); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(164);
					match(T__16);
					setState(165);
					catBranch();
					}
					}
					setState(168); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__16 );
				}
				break;
			case 3:
				_localctx = new CatExprUnitContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(170);
				catUnit();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
